--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,80 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <title>JobSyncAI</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Job Saver</title>
   <style>
     body {
-      width: 400px;
-      padding: 10px;
       font-family: Arial, sans-serif;
+      width: 350px;
+      padding: 15px;
     }
-    .job-form {
-      margin: 10px 0;
-      padding: 10px;
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
     }
     .form-group {
-      margin-bottom: 10px;
-    }
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
     }
     input, textarea {
       width: 100%;
       padding: 8px;
       border: 1px solid #ddd;
       border-radius: 4px;
-      box-sizing: border-box;
     }
     textarea {
-      height: 100px;
+      min-height: 100px;
       resize: vertical;
     }
+    .error {
+      color: red;
+      font-size: 12px;
+      display: none;
+    }
     button {
-      width: 100%;
-      padding: 8px;
-      margin: 5px 0;
-      background-color: #0077b5;
+      background-color: #0073b1;
       color: white;
       border: none;
-      border-radius: 4px;
+      padding: 10px;
       cursor: pointer;
+      border-radius: 5px;
     }
-    button:hover {
-      background-color: #006097;
-    }
-    /* Add this to prevent popup from closing */
-    body:hover {
-      min-height: 450px;
+    button:disabled {
+      background-color: #cccccc;
+      cursor: not-allowed;
     }
   </style>
 </head>
+
 <body>
-  <h2>JobSyncAI - Add Job</h2>
-  <form id="jobForm" class="job-form">
-    <div class="form-group">
-      <label for="title">Job Title*</label>
-      <input type="text" id="title" required>
-    </div>
-    <div class="form-group">
-      <label for="company">Company*</label>
-      <input type="text" id="company" required>
-    </div>
-    <div class="form-group">
-      <label for="salary">Salary</label>
-      <input type="text" id="salary" placeholder="e.g., $80,000/year">
-    </div>
-    <div class="form-group">
-      <label for="link">Job Link</label>
-      <input type="url" id="link">
-    </div>
-    <div class="form-group">
-      <label for="description">Job Description</label>
-      <textarea id="description"></textarea>
-    </div>
-    <button type="submit" id="saveJob">Save Job</button>
-  </form>
+  <div class="container">
+    <h2>Job Details</h2>
+    <form id="job-form">
+      <div class="form-group">
+        <label for="job-title">Title*:</label>
+        <input type="text" id="job-title" required>
+        <span class="error">Title is required</span>
+      </div>
+      <div class="form-group">
+        <label for="company">Company*:</label>
+        <input type="text" id="company" required>
+        <span class="error">Company is required</span>
+      </div>
+      <div class="form-group">
+        <label for="description">Description*:</label>
+        <textarea id="description" required></textarea>
+        <span class="error">Description is required</span>
+      </div>
+      <div class="form-group">
+        <label for="salary">Salary:</label>
+        <input type="text" id="salary">
+      </div>
+      <button type="submit" id="save-job">Save Job</button>
+    </form>
+  </div>
   <script src="popup.js"></script>
 </body>
+
 </html>
